# api/domain/entity/calendar.go
@@ -3,6 +3,7 @@ package entity
 import "github.com/takuoki/google-calendar-sync/api/domain/valueobject"
 
 type Calendar struct {
-	ID   valueobject.CalendarID
-	Name string
+	ID           valueobject.CalendarID
+	Name         string
+	RefreshToken *string
 }
